# IRiS_BimanualHapticDisplayOptimization

./: README.md  optim_progress.txt  optim_progress_val.txt  optimization_data.csv
src/gen_humanik/: CMakeLists.txt  package.xml
src/gen_humanik/launch/: analyze_humanik.py
src/gen_humanik/src/: analyze_human_and_savecsv.cpp  human_upper_body_human_right_temp_ikfast_solver.cpp
src/master_optimization/: CMakeLists.txt  package.xml
src/master_optimization/config/: fake_controllers.yaml  gazebo_human_tworobot.urdf  human_tworobot_forrobotIK.srdf  human_tworobot_objective1.srdf  human_tworobot_objective2.srdf  human_tworobot_objective3.srdf  human_upper_body.srdf  joint_limits.yaml  ompl_planning.yaml  show_setupconfigurations.srdf  stomp_planning.yaml
src/master_optimization/data/: leftarm.csv  rightarm.csv
src/master_optimization/model/meshes/visual/: franka_end_tip.STL
src/master_optimization/model/robots/: hand.xacro  human_tworobot.urdf  human_tworobot.urdf.xacro  human_tworobot_NimbRo.urdf  human_tworobot_objective1.urdf  human_tworobot_objective2.urdf  human_tworobot_objective3.urdf  human_tworobot_optim.urdf  human_upper_body.urdf  leftpanda_arm.srdf  panda_arm.urdf  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  rightpanda_arm.srdf  show_grabangle.urdf  show_setupconfiguration1.urdf  show_setupconfiguration2.urdf  show_setupconfiguration3.urdf  show_setupconfigurations.urdf  test.urdf
src/master_optimization/src/: calculate_score.cpp  create_launcefile.py  create_urdf.py  getObjectiveFcn.py  human_tworobot_leftpanda_ikfast_solver.cpp  human_upper_body_human_left_temp_ikfast_solver.cpp  optimization_multiprocessing.py
